# sql-agent

./: .gitignore  README.md  pyproject.toml  test_db.py  test_nodes.py
app/: db.py  graph.py  llm.py  main.py  mcp_client.py  nodes.py
database/: schema.sql  seed.sql
mcp_server/: graph.py  nodes.py  server.py
mcp_server/pipelines/deep_analysis/: graph.py  nodes.py
mcp_server/pipelines/query/: graph.py  nodes.py
mcp_server/shared/: nodes.py
mcp_server/tools/: database_tools.py
pydantic_models/: Analysisstate.py  agentState.py  analysisState.py
scripts/: init_db.py
