[project]
name = "sql-agent"
version = "0.1.0"
description = "LangGraph SQL Agent"
authors = [
    { name = "Ravi" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-groq",
    "sqlalchemy",
    "python-dotenv",
    "pydantic",
    "fastmcp",
    "httpx",
]


[tool.setuptools]
packages = ["app"]
